--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "discord-player": "^5.2.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "play-dl": "^1.4.4"
+    "play-dl": "^1.5.0"
   },
   "engines": {
     "node": "16.x"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.5",
+    "utf-8-validate": "^5.0.7"
   }
 }
