--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "discord-player": "^5.2.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "play-dl": "^1.5.0"
+    "play-dl": "^1.5.0",
+    "youtube-sr": "^4.1.10"
   },
   "engines": {
     "node": "16.x"
